2004-08-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/amqde.c: Change snprintf for ap_snprintf.

2004-08-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amrmtape.sh.in: Understand history info.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Parse CONTINUE and RQ-MORE-DISK line,
	  print if a dump is waiting for holding disk space (roomq).

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driverio.c (dumper_cmd): Print serial number for CONTINUE
	  command.
	* server-src/driverio.c (disk2serial): Try to find a 'dp' before
	  allocating a new serial.
	* server-src/dumper.c (update_dataptr): Read serial number for CONTINUE
	  command.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (getsize): Do SERVER estimate, call sendsize with
	  CALCSIZE estimate.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/calcsize.c: Support exclude and include like gnutar,
	  change in program argument.
	* client-src/sendsize.c: Execute calcsize as requested.
	* common-src/amfeatures.h (fe_calcsize_estimate): New feature.
	* common-src/amfeatures.c (am_init_feature_set): set
	  fe_calcsize_estimate.
	* server-src/amcheck.c (start_host): Check if client support CALCSIZE
	  estimate.

2004-08-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.h (ES_CLIENT, ES_SERVER, ES_CALCSIZE): New define
	  for estimate type.
	* server-src/conffile.h (dumptype_t): Add 'estimate' and 's_estimate'
	* server-src/conffile.c (get_estimate): New function to parse estimate
	  type, ....
	* server-src/diskfile.c (read_diskline): Copy 'estimate'.
	* server-src/diskfile.h (disk_t): Add 'estimate'.
	* server-src/amadmin.c (disklist_one): Print estimate type.

2004-08-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/match.c (match_tar, tar_to_regex): New fonction similar