@@ -1201,6 +1201,30 @@ Each disk using this set of options
 will get a full backup at least this often.
 Setting this to zero tries to do a full backup each run.
 .TP
+.BN estimate (client|calcsize|server)
+Default:
+.IR client .
+Determine the way amanda do it's estimate.
+.LP
+.RS
+.RS
+.TP
+client:
+Use the same program as the dumping program, this is the most acurate way to do estimate, but it can take a long time.
+.RE
+.RS
+.TP
+calcsize:
+Use a faster program to do estimate, but the result is less acurate.
+.RE
+.RS
+.TP
+server:
+Use only statistic from previous run to give an estimate, it take only a few second but the result is not accurate if your disk usage change from day to day.
+.RE
+.RE
+.IP
+.TP
 .P1 exclude [ list|file ][[optional][ append ][ "string" ]+]
 Default:
 .IR file .
